  - Added new parameters in XML regions for new monetary: <firstcoin>,<secondcoin> and <thirdcoin>
  - onSpeech event will work for items too
  - Fixed bug #0000026. (Indentation in generated wolfpack.xml broken)
  - Fixed bug #0000038. (Server crashed when saving freed item, that was still linked to a multi)
  - Fixed bug #0000003. (Server crashed after tag mismatch)
 * Definition Changes:
  - Tinker buy some items now
  - Bench (0x1049) which was crafted was "unusable"
  - fixed bug #0000381 ("potion_keg" and "potionkeg")
  - Set the minimum restock amount of reagents, arrows and bolts to 50.
  - Fixed the name of sheep.
  - Fixed bug #0000386 (missing tongs sellprice tag)
  - Fixed light radius for certain lightsources.
  - Removed carve tags (and related files) which are no longer used.
  - Added Samurai Empire craftables to the tailoring menu.
  - Added watersource tags (bug #0000399)
  - Converted NPC skill tags to <skill id="skillname">value</skill>
  - Fix for skills.xml and NPCs: magicresist is now magicresistance.
  - Fixed weaponsmith not buying weapons.
  - Adjusted light radius of some items.
  - Added books to learn special abilities (mining sand/stone; glassblowing; masonry)
  - Added granite and sand definitions
  - Added craftmenu for glassblowing
  - Support up to client 5.0.0.
  - Added Multis and Multi deeds.
  - Implemented some new npcs (thx to idget).
  - Implemented SE items for crafting.
  - Growable and harvestable hay, wheat, cotton, flax, hops.
  - Grapevines got the farming script.
  - Misc. id typos fixed.
  - Added Mondain's Legacy Weapons
  - Implemented "Quest Definitions", for Quest System
 * Python Script Changes:
  - Improved/fixed goitem and gouid command in relation to containers (sending content).
  - Added an follow button to who menu.
  - Added a follow command.
  - Tinkers can now choose a second material.
  - Swingspeed is now limited to 1 swing per second.
  - Implemented several item property caps.