@@ -60,4 +60,32 @@ void clearProfilingInfo();
 #define clearProfilingInfo()
 #endif
 
+/**
+* Those macros help profiling using QTime.
+* They allow to sum up the time taken by a given bit of code
+* in a method called several times.
+* This way one can find out which low-level method used by a high-level
+* method is taking most of its time
+*
+*
+*  Declare the var somewhere, out of any method:
+*   int pr_theMethod = 0;
+*  (the name pr_* helps finding and removing all of this before committing)
+*
+*  Then in the method, around the code to be timed:
+*   PROFILE_METHOD_BEGIN( pr_theMethod );
+*   ...
+*   PROFILE_METHOD_END( pr_theMethod );
+*
+*  And finally, to see the result, put this call in a method
+*  called after all that (destructor, program exit...)
+*   PROFILE_METHOD_PRINT( pr_theMethod, "theMethod" );
+*
+*/
+#include <QTime>
+#define PROFILE_METHOD_BEGIN(sym) extern int sym; QTime profile_dt##sym; profile_dt##sym.start();
+#define PROFILE_METHOD_END(sym) extern int sym; sym += profile_dt##sym.elapsed();
+#define PROFILE_METHOD_PRINT(sym, name) extern int sym; Console::instance()->send( QString("%1 took %2 milliseconds\n").arg( name ).arg( sym ) );
+
+
 #endif
